# file-replicator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
file_replicator/: cli.py  lib.py
tests/: test_lib.py
